Fixed styles: Home searcher behind the navbar depending of navigator.

--- a/client/src/app/components/web/home.component.css
+++ b/client/src/app/components/web/home.component.css
@@ -74,9 +74,8 @@ p {
 
 .searchMain {
     position: relative;
-    display: table;
     width: 100%;
-    min-height: 100vh;
+    min-height: 90vh;
     top: 15%;
     left: 0;
     z-index: 2;
